--- a/styles.css
+++ b/styles.css
@@ -293,7 +293,7 @@ body{
     width: 100px;
     height:35px;
     margin-top:310px;
-    margin-left:-450px;
+    margin-left:-430px;
 }.input{
     width: 50px;
     text-align: center;
@@ -304,18 +304,18 @@ body{
     text-decoration:none;
     color: white;
     background-color: rgb(255, 85, 0);
-    padding:8px;
+    padding:8px 25px 8px 25px;
     height:30px;
-    border-radius:10px;
+    border-radius:20px;
     text-align: center;
     margin-top:370px;
     margin-left:20px;
 }.Prodt{
     margin-top:470px;
-    margin-left:-200px;
+    margin-left:-190px;
 }.itemsumer{
-   margin-top:-90px;
-   margin-left:550px; 
+   margin-top:-220px;
+   margin-left:545px; 
    width:500px;
    color: gray;
 }
@@ -329,4 +329,51 @@ body{
 }
 .small-img-col{
     cursor: pointer;
+}
+/*cart items */
+.cart-container{
+    margin: 80px auto;
+
+}table{
+    width: 100%;
+    border-collapse: collapse;
+}.cart-info{
+    display: flex;
+    flex-wrap:wrap;
+}th{
+    text-align:left;
+    padding:5px;
+    color: #fff;
+    background:#ff523b;
+    font-weight: normal;
+}td{
+    padding:10px 5px;
+} td input{
+    width:40px;
+    height:30px;
+    padding:5px;
+}td a{
+    color:#ff523b;
+    font-size: 12px;
+}td img{
+    width: 80px;
+    height: 80px;
+    margin-right: 10px;
+}.total-price{
+    display:flex;
+    justify-content:flex-end;
+}.total-price table{
+    border-top: 3px solid #ff523b;
+    width:100%;
+    max-width:600px;
+}td:last-child{
+    text-align: right;
+}th:last-child{
+    text-align: right;
+}.cart-info p{
+    display:none;
+}.acc-cont{
+    background:radial-gradient(#fff, #ffd6d6)
+}.acc-cont img{
+    width: 700px;
 }
